--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <input id="form" class="input" type="email">
                 <!--</div>-->
                 <!--<div class="submit">-->
-                    <input class="submit" type="submit" value="Subscribe now">
+                    <input class="submit" type="submit" value="Subscribe">
                 <!--</div>-->
             </form>
         </div>
