--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
         <nav class="menu">
             <ul class="nav-menu__list">
-                <li class="nav-menu__list-item"><a href="#second__section">MAIN</a></li>
-                <li class="nav-menu__list-item"><a href="#third__section">ABOUT</a></li>
-                <li class="nav-menu__list-item"><a href="#fourth__section">GAME FEATURES</a></li>
-                <li class="nav-menu__list-item"><a href="#fifth__section">System requirements</a></li>
-                <li class="nav-menu__list-item"><a href="#sixth__section">quotes</a></li>
+                <li class="nav-menu__list-item"><a href="#first__section">MAIN</a></li>
+                <li class="nav-menu__list-item"><a href="#second__section">ABOUT</a></li>
+                <li class="nav-menu__list-item"><a href="#third__section">GAME FEATURES</a></li>
+                <li class="nav-menu__list-item"><a href="#fourth__section">System requirements</a></li>
+                <li class="nav-menu__list-item"><a href="#fifth__section">quotes</a></li>
             </ul>
         </nav>
         <div class="header-icons">
